# aioamazondevices

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  library_test.py  mypy.ini  package-lock.json  package.json  pyproject.toml  renovate.json  ruff.toml  setup.py  shell.nix  solution.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  labels.toml
.github/workflows/: ci.yml  contributors-list.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  poetry-upgrade.yml
scripts/: cleanup-out.sh  cleanup.sh  downloaded_sounds_list.json  setup.sh  sort_DEVICE_TYPE_TO_MODEL.py  sounds_services.yaml  sounds_strings.json  update_sounds_list.py
scripts/ha/: sounds_services.yaml  sounds_strings.json
scripts/home-assistant/: update_sounds_list.py
src/aioamazondevices/: __init__.py  api.py  auth.py  capabilities.py  const.py  devices.py  exceptions.py  http_wrapper.py  httpx.py  login.py  main.py  query.py  sequence_batcher.py  sounds.py  structures.py  utils.py
src/aioamazondevices/const/: __init__.py  common.py  devices.py  http.py  metadata.py  queries.py  schedules.py  sounds.py  todo.py
src/aioamazondevices/data/: __init__.py
src/aioamazondevices/data/graphql/: __init__.py
src/aioamazondevices/data/rest/: __init__.py
src/aioamazondevices/implementation/: __init__.py  communication.py  device.py  dnd.py  email.py  history.py  http2.py  media.py  notification.py  sensor.py  sensors.py  sequence.py  sequence_batcher.py  todo.py
templates/: CHANGELOG.md.j2
tests/: __init__.py  test_init.py  test_main.py  test_utils.py
