[project]
name = "aioamazondevices"
version = "13.3.2"
requires-python = ">=3.12"
description = "Python library to control Amazon devices"
authors = [
{ name = "Simone Chemelli", email = "simone.chemelli@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14", # renovate: depName=python datasource=python-version
    "Topic :: Software Development :: Libraries",
]
dependencies = [
"aiohttp (>=3.12.7)",
"beautifulsoup4",
"httpx[http2]",
"langcodes",
"orjson (>=3.10,<4)",
"python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/chemelli74/aioamazondevices"
"Bug Tracker" = "https://github.com/chemelli74/aioamazondevices/issues"
"Changelog" = "https://github.com/chemelli74/aioamazondevices/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "anyio>=4",
    "colorlog",
    "pytest>=9.0,<10",
    "pytest-cov>=5,<8",
    "types-python-dateutil>=2.9.0.20260323,<3",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/aioamazondevices/__init__.py:__version__",
]
# Keep this version in sync with scripts/setup.sh and .github/workflows/ci.yml.
build_command = "python -m pip install \"uv==0.11.6\" && uv build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.pytest.ini_options]
addopts = "-v -Wdefault"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff.isort]
known-first-party = ["aioamazondevices", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disallow_untyped_decorators = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["aioamazondevices*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
